# mefirst

./: .gitignore  BUILD.md  Cargo.toml  Dockerfile.ebpf  Makefile  QUICKSTART.md  README.md  build.rs
.cargo/: config.toml
.kiro/specs/mefirst/: .config.kiro  REQUIREMENTS_TASKS_MAPPING.md  design.md  requirements.md  tasks.md
.kiro/specs/process-aware-routing/: .config.kiro  IMPLEMENTATION_NOTES.md  design.md  requirements.md  tasks.md
ebpf/: Cargo.toml
ebpf/src/: lib.rs  lsm.rs  main.rs
examples/: HOST_PATTERN_GUIDE.md  IPv6_TROUBLESHOOTING.md  README.md  config-inject-headers.toml  config-ip-specific.toml  config-optional-ip.toml  config-optional-ip.yaml  config-process-aware.toml  config-process-aware.yaml  config-proxy-request-stdin.toml  config-with-plugins.toml  config.toml  config.yaml  http-response-handler.sh  logging_demo.rs
examples/responses/: credentials.json  role-list.json
scripts/: build-cross-platform.sh  build-ebpf.sh  build-linux-native.sh
src/: capability.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs
src/plugin/: command.rs  config.rs  factory.rs  file.rs  matcher.rs  mod.rs  process_aware.rs
src/process/: mod.rs  retriever.rs
src/proxy/: handler.rs  mod.rs  socket_fd_layer.rs
src/redirect/: ebpf.rs  mod.rs
src/upstream/: client.rs  proxy.test.rs
tests/: capability_logging_test.rs  config_file_loading.rs  config_integration.rs  configuration_validation_test.rs  ebpf_capability_test.rs  header_injection_test.rs  inject_process_headers_config_test.rs  logging_integration_test.rs  lsm_hook_test.rs  plugin_interception_test.rs  process_metadata_routing_test.rs  proxy_plugin_integration_test.rs  proxy_request_test.rs
