[package]
name = "mefirst"
version = "0.1.0"
edition = "2021"

[lib]
name = "mefirst"
path = "src/lib.rs"

[[bin]]
name = "mefirst"
path = "src/main.rs"

[workspace]
members = [".", "ebpf"]
resolver = "2"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1"
http-body-util = "0.1"

# HTTP client (no TLS needed for local upstream)
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

# Linux-only dependencies (eBPF support)
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.12", features = ["async_tokio"], optional = true }
capctl = { version = "0.2", optional = true }
mefirst-ebpf = { path = "ebpf" }

# Non-Linux platforms still need the shared data structures
[target.'cfg(not(target_os = "linux"))'.dependencies]
mefirst-ebpf = { path = "ebpf" }

[features]
default = []
ebpf = ["aya", "capctl"]
# Allow loading external eBPF programs (disabled by default for security)
# Only enable this if you need to load custom eBPF programs from files
allow-external-ebpf = []

# eBPF programs require panic="abort" since they run in kernel space
[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
